--- a/Cyrus.pod
+++ b/Cyrus.pod
@@ -106,6 +106,10 @@ Input: C<mechanism>, C<username>, C<default_realm>
 
 Output: C<secret_phrase (password)>
 
+B<Remark>: Programmers that are using should specify both callbacks (getsecret and checkpass).
+Then, depending on you Cyrus SASL library either the one or the other is called. Cyrus SASL v1 
+ignores checkpass and Cyrus SASL v2 ignores getsecret.
+
 =item putsecret (SASL v1) and setpass (SASL v2) 
 
 are currently not supported (and won't be, unless someone needs it).
@@ -122,15 +126,18 @@ C<Type of principal> is "AUTHID" for Authentication ID or "AUTHZID"
 for Authorization ID.
 
 B<Remark>: This callback is ideal to get the username of the user using your service.
+If C<Authen::SASL::Cyrus> is linked to Cyrus SASL v1, which doesn't have a canonuser callback,
+it will simulate this callback by using the authorize callback internally. Don't worry, the 
+authorize callback is available anyway.
 
 =item authorize (server)
 
-This callback represents the C<sasl_authorize_t> from the library. Especially when using
-SASL v1 library, this callback is useful getting the username (like canon does for SASL v2).
+This callback represents the C<sasl_authorize_t> from the library. 
 
 Input: C<authenticated_username>, C<requested_username>, (C<default_realm> SASL v2 only)
 
-Output: C<canonicalized_username> SASL v1  resp. true or false when using SASL v2 lib
+Output: C<canonicalized_username> SASL v1 resp. true or false when using SASL v2 lib
+There is something TODO, I think.
 
 =back
 
