--- a/XS.pod
+++ b/XS.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-Authen::SASL::Cyrus	- XS code to glue Perl SASL to Cyrus SASL
+Authen::SASL::XS	- XS code to glue Perl SASL to Cyrus SASL
 
 =head1 SYNOPSIS
 
@@ -18,7 +18,7 @@ Authen::SASL::Cyrus	- XS code to glue Perl SASL to Cyrus SASL
 =head1 DESCRIPTION
 
 SASL is a generic mechanism for authentication used by several
-network protocols. B<Authen::SASL::Cyrus> provides an implementation
+network protocols. B<Authen::SASL::XS> provides an implementation
 framework that all protocols should be able to share.
 
 The XS framework makes calls into the existing libsasl.so resp. libsasl2
@@ -48,10 +48,10 @@ The Cyrus-SASL library uses callbacks when the application
 needs some information. Common reasons are getting
 usernames and passwords.
 
-Authen::SASL::Cyrus allows Cyrus-SASL to use perl-variables and perl-subs
+Authen::SASL::XS allows Cyrus-SASL to use perl-variables and perl-subs
 as callback-targets.
 
-Currently Authen::SASL::Cyrus supports the following Callback types:
+Currently Authen::SASL::XS supports the following Callback types:
 (for a more detailed description on what the callback type is used for
 see the respective man pages)
 
@@ -131,7 +131,7 @@ C<Type of principal> is "AUTHID" for Authentication ID or "AUTHZID"
 for Authorisation ID.
 
 B<Remark>: This callback is ideal to get the username of the user using your service.
-If C<Authen::SASL::Cyrus> is linked to Cyrus SASL v1, which doesn't have a canonuser callback,
+If C<Authen::SASL::XS> is linked to Cyrus SASL v1, which doesn't have a canonuser callback,
 it will simulate this callback by using the authorize callback internally. Don't worry, the
 authorize callback is available anyway.
 
@@ -157,7 +157,7 @@ Out: true or false
 
 =head2 Ways to pass a callback
 
-Authen::SASL::Cyrus supports three different ways to pass a callback
+Authen::SASL::XS supports three different ways to pass a callback
 
 =over 4
 
@@ -206,7 +206,7 @@ sub canon
   return $user;
 }
 
-=head1 Authen::SASL::Cyrus METHODS
+=head1 Authen::SASL::XS METHODS
 
 =over 4
 
@@ -214,7 +214,7 @@ sub canon
 
 Constructor for creating server-side sasl contexts.
 
-Creates and returns a new connection object blessed into Authen::SASL::Cyrus.
+Creates and returns a new connection object blessed into Authen::SASL::XS.
 It is on that returned reference that the following methods are available.
 The SERVICE is the name of the service being implemented, which may be used
 by the underlying mechanism. An example service therefore is "ldap".
@@ -225,7 +225,7 @@ by the underlying mechanism. An example service therefore is "ldap".
 
 Constructor for creating server-side sasl contexts.
 
-Creates and returns a new connection object blessed into Authen::SASL::Cyrus.
+Creates and returns a new connection object blessed into Authen::SASL::XS.
 It is on that returned reference that the following methods are available.
 The SERVICE is the name of the service being implemented, which may be used
 by the underlying mechanism. An example service is "ldap". The HOST is the
@@ -345,7 +345,7 @@ It depends on the used mechanism how secure the encryption will be.
 C<error> returns an array with all known error messages.
 Basicly the sasl_errstring function is called with the current error_code.
 When using Cyrus-SASL 2.x library also the string returned by sasl_errdetail
-is given back. Additionally the special Authen::SASL::Cyrus advise is
+is given back. Additionally the special Authen::SASL::XS advise is
 returned if set.
 After calling the C<error> function, the error code and the special advice
 are thrown away.
@@ -392,7 +392,7 @@ That's why we all using perl, eh?
     }
  );
 
- # Creating the Authen::SASL::Cyrus object
+ # Creating the Authen::SASL::XS object
  my $conn = $sasl->server_new("service","","ip;port local","ip;port remote");
 
  # Clients first string (maybe "", depends on mechanism)
@@ -425,7 +425,7 @@ That's why we all using perl, eh?
     }
  );
 
- # Creating the Authen::SASL::Cyrus object
+ # Creating the Authen::SASL::XS object
  my $conn = $sasl->client_new("service", "hostname.domain.tld");
 
  # Client begins always
